# panther_launcher

./: CMakeLists.txt  HISTORY.md  PKGBUILD  README.md  meson.build  meson_options.txt  panther_launcher.avprj
data/: CMakeLists.txt  org.rastersoft.panther.gschema.xml
data/dbus/: CMakeLists.txt
debian/: changelog  control
panther_applet/: CMakeLists.txt  Makefile  applet.txt  dbus.c  dbus.h  gdbus.xml  panther_applet.c  panther_launcher.panel-applet
panther_gnome_shell/: CMakeLists.txt  README.md  extension.js  install.sh  metadata.json
panther_mate/: CMakeLists.txt  applet.txt  com.rastersoft.PantherApplet.mate-panel-applet.in  dbus.c  dbus.h  org.mate.panel.applet.PantherApplet.service.in  panther_launcher.mate-panel-applet.in  panther_mate_applet.c
po/: CMakeLists.txt  LINGUAS  meson.build
rpmbuild/SPECS/: panther_launcher.spec
src/: CMakeLists.txt  Panther.vala  PantherView.vala  Pixels.vala  Settings.vala  meson.build
src/Backend/: App.vala  AppSystem.vala  DBusService.vala
src/Widgets/: AppEntry.vala  CategoryView.vala  Grid.vala  SearchItem.vala  SearchView.vala  Sidebar.vala  Switcher.vala
src/synapse-core/: relevancy-backend-zg.vala
src/synapse-plugins/: desktop-file-plugin.vala
