i18n = import('i18n')
i18n.gettext('panther_launcher', languages: ['en_CA', 'zh_CN', 'fi', 'sk', 'id', 'ky', 'sl', 'eu', 'fa', 'ta', 'lt', 'fr', 'ast', 'nn', 'am', 'sma', 'de', 'hr', 'pt', 'lo', 'cs', 'lb', 'th', 'ml', 'bg', 'is', 'ca', 'el', 'vi', 'te', 'da', 'en_AU', 'az', 'bs', 'uk', 'hi', 'sw', 'tr', 'ckb', 'si', 'nl', 'be', 'gl', 'lv', 'sv', 'eo', 'ko', 'sq', 'hu', 'it', 'zh_HK', 'nb', 'es', 'af', 'bn', 'pl', 'sr', 'fr_CA', 'he', 'ar', 'rue', 'my', 'mr', 'pt_BR', 'ja', 'ru', 'hy', 'et', 'sr@latin', 'zh_TW', 'ka', 'en_GB', 'ro', 'ms'])
